Implements FhirPackage loader in C++.  This is the analogue of FhirPackage.java and fhir_package.py
PiperOrigin-RevId: 407901534

--- a/bazel/buildfiles/BUILD
+++ b/bazel/buildfiles/BUILD
@@ -2,6 +2,4 @@ licenses(["notice"])
 
 # Build files for external dependencies that do not provide build files.
 
-exports_files(glob([
-    "*.BUILD",
-]))
+exports_files(["libarchive_config.h"] + glob(["*.BUILD"]))
