Soft-deprecates the repeated field_restriction field in Profile in favor of using a repeated R4 ElementDefinition that can be merged on fields in a Profile.  This allows tweaking any part of the ElementDefinition, without requiring custom implementations of each piece.
Adds a must_support bit to ExtensionSlice, so that newly created extensions can be marked as mustSupport.

PiperOrigin-RevId: 413433527

--- a/proto/google/fhir/proto/BUILD
+++ b/proto/google/fhir/proto/BUILD
@@ -29,6 +29,7 @@ fhir_proto_library(
     proto_deps = [
         "//proto/google/fhir/proto:annotations_proto",
         "//proto/google/fhir/proto/r4/core:codes_proto",
+        "//proto/google/fhir/proto/r4/core:datatypes_proto",
     ],
     proto_library_prefix = "profile_config",
 )
