--- a/go/jsonformat/BUILD
+++ b/go/jsonformat/BUILD
@@ -78,10 +78,15 @@ go_test(
         "//go/fhirversion",
         "//go/jsonformat/errorreporter",
         "//go/jsonformat/internal/jsonpbhelper",
+        "//proto/google/fhir/proto/dstu2:codes_go_proto",
+        "//proto/google/fhir/proto/dstu2:datatypes_go_proto",
+        "//proto/google/fhir/proto/dstu2:metadatatypes_go_proto",
+        "//proto/google/fhir/proto/dstu2:resources_go_proto",
         "//proto/google/fhir/proto/r4/core:codes_go_proto",
         "//proto/google/fhir/proto/r4/core:datatypes_go_proto",
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_go_proto",
         "//proto/google/fhir/proto/r4/core/resources:code_system_go_proto",
+        "//proto/google/fhir/proto/r4/core/resources:condition_go_proto",
         "//proto/google/fhir/proto/r4/core/resources:device_go_proto",
         "//proto/google/fhir/proto/r4/core/resources:observation_go_proto",
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_go_proto",
