add interface for turning json objects into protocol buffers
- add function json_fhir_object_to_proto which accepts parsed json objects in
  addition to the existing interface which accepts raw json strings

PiperOrigin-RevId: 422608650

--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -215,6 +215,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:test_script_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:verification_result_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:vision_prescription_py_pb2",
+        "//py/google/fhir:fhir_errors",
         "//py/google/fhir/json_format:json_format_test",
         ":json_format",
         "//py/google/fhir/testing:testdata_utils",
