--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -325,6 +325,7 @@ cc_library(
         ":references",
         ":resource_validation",
         ":util",
+        "//cc/google/fhir/json:json_sax_handler",
         "//cc/google/fhir/r4:profiles",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
@@ -339,7 +340,6 @@ cc_library(
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
         "@com_google_protobuf//:protobuf",
-        "@com_googlesource_code_re2//:re2",
         "@jsoncpp_git//:jsoncpp",
     ],
 )
