Remove dependency from json_parser on jsoncpp.
PiperOrigin-RevId: 424519163

--- a/cc/google/fhir/json/BUILD
+++ b/cc/google/fhir/json/BUILD
@@ -3,11 +3,36 @@ licenses(["notice"])
 package(default_visibility = ["//cc/google/fhir:__pkg__"])
 
 cc_library(
+    name = "fhir_json",
+    srcs = ["fhir_json.cc"],
+    hdrs = ["fhir_json.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+    ],
+)
+
+cc_test(
+    name = "fhir_json_test",
+    srcs = ["fhir_json_test.cc"],
+    deps = [
+        ":fhir_json",
+        "//cc/google/fhir/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
     name = "json_sax_handler",
     srcs = ["json_sax_handler.cc"],
     hdrs = ["json_sax_handler.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        ":fhir_json",
         "@com_google_absl//absl/cleanup",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
@@ -15,8 +40,6 @@ cc_library(
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:optional",
         "@nlohmann_json//:json",
-        # TODO: To be removed once we move away from Json::Value
-        "@jsoncpp_git//:jsoncpp",
     ],
 )
 
@@ -27,6 +50,5 @@ cc_test(
         ":json_sax_handler",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
-        "@jsoncpp_git//:jsoncpp",
     ],
 )
