--- a/spec/BUILD
+++ b/spec/BUILD
@@ -101,19 +101,53 @@ fhir_package(
     definitions =
         [
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Address.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Age.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Annotation.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Attachment.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-BackboneElement.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Count.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-boolean.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-code.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-date.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-dateTime.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-DataRequirement.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Dosage.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Distance.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-CodeableConcept.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Coding.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-ContactDetail.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-ContactPoint.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Contributor.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Duration.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Element.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Expression.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Extension.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-HumanName.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Identifier.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-instant.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-integer.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-time.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Meta.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Money.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Narrative.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Patient.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Observation.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-ParameterDefinition.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Period.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Quantity.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Range.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Ratio.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Reference.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-RelatedArtifact.json",
             "hl7.fhir.core/4.0.1/package/StructureDefinition-Resource.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-SampledData.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Signature.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-Timing.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-TriggerDefinition.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-UsageContext.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-string.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-uri.json",
+            "hl7.fhir.core/4.0.1/package/StructureDefinition-url.json",
         ],
     package_info = "fhir_r4_package_info.prototxt",
 )
