Add Function value_sets.insert_statement_for_codes The function may be used to maintain valueset_codes tables.
PiperOrigin-RevId: 429361692

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -141,6 +141,7 @@ py_library(
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/utils:fhir_package",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -216,5 +217,6 @@ py_test(
         "//py/google/fhir/utils:fhir_package",
         requirement("absl-py"),
         requirement("six"),
+        requirement("sqlalchemy"),
     ],
 )
