--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -241,6 +241,7 @@ py_test(
     deps = [
         ":value_sets",
         "//py",
+        "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/utils:fhir_package",
