Add Entry-points For Value Set Expansion
- Add function expand_value_set for expanding either an expansion or
  intensional value set.
- Add function expand_value_sets for concurrently expanding a
  collection of value sets.
- Update value_set_expansion_from_terminology_service interface to
  accept a dictionary of API keys for the various available
  terminology servers rather than a single API key.

PiperOrigin-RevId: 430493058

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -152,6 +152,7 @@ py_library(
     ],
     srcs_version = "PY3",
     deps = [
+        ":terminology_service_client",
         "//py",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
@@ -239,6 +240,7 @@ py_test(
     python_version = "PY3",
     srcs_version = "PY3",
     deps = [
+        ":terminology_service_client",
         ":value_sets",
         "//py",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
