Refactors fhir_path_validation.{h/cc} to use an ErrorReporter throughout, rather than aggregating ValidationResults directly.  Maintains equivalent behavior by adding a private ValidationResultsErrorReporter.
This has one behavioral difference: This no longer aggregates successes, only failures (since ErrorReporter does not have a "report success" API)

PiperOrigin-RevId: 430980173

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -78,9 +78,11 @@ cc_library(
     deps = [
         ":fhir_path",
         "//cc/google/fhir:annotations",
+        "//cc/google/fhir:error_reporter",
         "//cc/google/fhir:primitive_handler",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
+        "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto/google/fhir/proto:annotations_cc_proto",
         "@com_google_absl//absl/base:core_headers",
@@ -256,7 +258,6 @@ cc_test(
         "//proto/google/fhir/proto/stu3:uscore_cc_proto",
         "//proto/google/fhir/proto/stu3:uscore_codes_cc_proto",
         "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
     ],
