Removes deprecated c++ Validation APIs for ValidateResourceWithFhirPath, and eliminates the ValidateResource API since it is redundant with ValidateWithoutFhirPath with a FailFast error reporter.  This also has the benefit of being more explicit - It was not obvious that ValidateResource skipped fhirpath.
PiperOrigin-RevId: 430989840

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -317,6 +317,7 @@ cc_library(
         ":annotations",
         ":codeable_concepts",
         ":core_resource_registry",
+        ":error_reporter",
         ":extensions",
         ":fhir_types",
         ":primitive_handler",
