--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -558,6 +558,7 @@ cc_library(
         "//proto/google/fhir/proto/r4/core:datatypes_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:operation_outcome_cc_proto",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
     ],
 )
 
