Accept URL Strings Rather Than ValueSet Objects In expand_value_set
- Expect URL strings rather than protocol buffer objects for value
  sets in TerminologyServiceClient.expand_value_set
- Drop support for cts.nlm.nih.gov terminology service for now, as it
  does not support looking up value sets by URL. It only supports
  looking up value sets by ID. We'll have to build a work around for
  this in order to add support back in, as we do not always have value
  set IDs when expanding value sets in the current workflow.
- Add some logging and better error reporting.
- Handle empty value set expansions.

PiperOrigin-RevId: 432041596

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -140,6 +140,8 @@ py_library(
         "//py",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/r4:json_format",
+        "//py/google/fhir/utils:url_utils",
+        requirement("absl-py"),
         requirement("requests"),
     ],
 )
