Handle Value Sets Expanding to Full Code Systems
- Make _expand_value_set_locally and _concept_set_to_expansion methods
  on ValueSetResolver so they can access the resolver's package
  manager.
- For value sets referencing a code system but not stating a list of
  codes within the code system defining the expansion, take the
  expansion as the entire code system.

PiperOrigin-RevId: 433616484

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -156,9 +156,11 @@ py_library(
     deps = [
         ":terminology_service_client",
         "//py",
+        "//proto/google/fhir/proto/r4/core/resources:code_system_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/utils:fhir_package",
+        "//py/google/fhir/utils:proto_utils",
         "//py/google/fhir/utils:url_utils",
         requirement("sqlalchemy"),
     ],
@@ -247,6 +249,7 @@ py_test(
         ":value_sets",
         "//py",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
+        "//proto/google/fhir/proto/r4/core/resources:code_system_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/utils:fhir_package",
