--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -425,6 +425,7 @@ cc_test(
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:encounter_cc_proto",
         "//proto/google/fhir/proto/r4/core/resources:observation_cc_proto",
+        "//testdata/r4/profiles:test_cc_proto",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
