--- a/proto/google/fhir/proto/BUILD
+++ b/proto/google/fhir/proto/BUILD
@@ -33,3 +33,13 @@ fhir_proto_library(
     ],
     proto_library_prefix = "profile_config",
 )
+
+fhir_proto_library(
+    srcs = ["validation.proto"],
+    proto_library_prefix = "validation",
+)
+
+fhir_proto_library(
+    srcs = ["fhirpath_replacement_list.proto"],
+    proto_library_prefix = "fhirpath_replacement_list",
+)
