--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -1,4 +1,10 @@
 absl-py~=0.10.0
+antlr4-python3-runtime~=4.7
 backports.zoneinfo~=0.2.1;python_version<"3.9"
+google-cloud-bigquery~=2.34
+immutabledict~=2.2
+pandas~=1.1
 protobuf~=3.13
 python-dateutil~=2.8
+requests~=2.27
+sqlalchemy~=1.2
