Add Function For Counting Systems Within Value Sets
- Add function count_code_systems_within_valueset_query for counting
  the number of code systems contained within a value set according to
  the materialized valueset_codes table.

PiperOrigin-RevId: 445495948

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -178,6 +178,7 @@ py_library(
         ":value_sets",
         "//py",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
+        "//py/google/fhir/utils:url_utils",
         requirement("absl-py"),
         requirement("google-cloud-bigquery"),
         requirement("sqlalchemy"),
