Move the google.fhir.utils package to google.fhir.core.utils
PiperOrigin-RevId: 445981776

--- a/py/google/fhir/BUILD
+++ b/py/google/fhir/BUILD
@@ -24,7 +24,7 @@ py_library(
     deps = [
         "@com_google_protobuf//:protobuf_python",
         "//py",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("backports.zoneinfo"),
         requirement("python-dateutil"),
         requirement("six"),
@@ -42,9 +42,9 @@ py_library(
         ":fhir_errors",
         "//py",
         "//proto/google/fhir/proto:annotations_py_pb2",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
+        "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -61,9 +61,9 @@ py_library(
         ":fhir_errors",
         "//py",
         "//proto/google/fhir/proto:annotations_py_pb2",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
+        "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -102,9 +102,9 @@ py_library(
     srcs_version = "PY3",
     deps = [
         "//py",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:path_utils",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:path_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -122,9 +122,9 @@ py_library(
         "//py",
         "//proto/google/fhir/proto:annotations_py_pb2",
         "//py/google/fhir:primitive_time_utils",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
+        "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -140,7 +140,7 @@ py_library(
         "//py",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
         "//py/google/fhir/r4:json_format",
-        "//py/google/fhir/utils:url_utils",
+        "//py/google/fhir/core/utils:url_utils",
         requirement("absl-py"),
         requirement("requests"),
     ],
@@ -159,9 +159,9 @@ py_library(
         "//proto/google/fhir/proto/r4/core/resources:code_system_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
-        "//py/google/fhir/utils:fhir_package",
-        "//py/google/fhir/utils:proto_utils",
-        "//py/google/fhir/utils:url_utils",
+        "//py/google/fhir/core/utils:fhir_package",
+        "//py/google/fhir/core/utils:proto_utils",
+        "//py/google/fhir/core/utils:url_utils",
         requirement("absl-py"),
     ],
 )
@@ -178,7 +178,7 @@ py_library(
         ":value_sets",
         "//py",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
-        "//py/google/fhir/utils:url_utils",
+        "//py/google/fhir/core/utils:url_utils",
         requirement("absl-py"),
         requirement("google-cloud-bigquery"),
         requirement("sqlalchemy"),
@@ -220,8 +220,8 @@ py_library(
         "//py/google/fhir:fhir_errors",
         "//py/google/fhir:primitive_time_utils",
         "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir/utils:path_utils",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:path_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -272,7 +272,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core/resources:code_system_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:structure_definition_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:value_set_py_pb2",
-        "//py/google/fhir/utils:fhir_package",
+        "//py/google/fhir/core/utils:fhir_package",
         requirement("absl-py"),
         requirement("six"),
     ],
