--- a/py/google/fhir/core/utils/BUILD
+++ b/py/google/fhir/core/utils/BUILD
@@ -125,7 +125,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core:codes_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -145,7 +145,7 @@ py_test(
         "//proto/google/fhir/proto/r4:uscore_py_pb2",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
-        "//py/google/fhir/utils:fhir_types",
+        "//py/google/fhir/core/utils:fhir_types",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -166,7 +166,7 @@ py_test(
         "//proto/google/fhir/proto/r4/core:valuesets_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:observation_py_pb2",
         "//proto/google/fhir/proto/r4/core/resources:patient_py_pb2",
-        "//py/google/fhir/utils:annotation_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
         "//testdata/r4/profiles:test_py_pb2",
         requirement("absl-py"),
         requirement("six"),
@@ -183,7 +183,7 @@ py_test(
     srcs_version = "PY3",
     deps = [
         "//py",
-        "//py/google/fhir/utils:path_utils",
+        "//py/google/fhir/core/utils:path_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
