--- a/py/google/fhir/json_format/BUILD
+++ b/py/google/fhir/json_format/BUILD
@@ -27,9 +27,9 @@ py_library(
         "//py/google/fhir:primitive_handler",
         "//py/google/fhir:references",
         "//py/google/fhir:resource_validation",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
+        "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -63,13 +63,13 @@ py_test(
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//py/google/fhir:extensions",
         "//py/google/fhir:fhir_errors",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
+        "//py/google/fhir/core/utils:path_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         "//py/google/fhir/r4:json_format",
         "//py/google/fhir/testing:protobuf_compare",
         "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
-        "//py/google/fhir/utils:path_utils",
-        "//py/google/fhir/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
