--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -44,6 +44,8 @@ py_library(
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
         "//py/google/fhir:primitive_handler",
         "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
         "//py/google/fhir/json_format/wrappers:base64_binary",
         "//py/google/fhir/json_format/wrappers:date",
         "//py/google/fhir/json_format/wrappers:date_time",
@@ -51,8 +53,6 @@ py_library(
         "//py/google/fhir/json_format/wrappers:instant",
         "//py/google/fhir/json_format/wrappers:primitive_wrappers",
         "//py/google/fhir/json_format/wrappers:time",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -133,7 +133,7 @@ py_test(
         "//py/google/fhir/json_format:json_format_test",
         "//py/google/fhir/stu3:json_format",
         "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -170,7 +170,7 @@ py_test(
         "//py",
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
         "//py/google/fhir:references",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
