--- a/py/google/fhir/r4/BUILD
+++ b/py/google/fhir/r4/BUILD
@@ -44,6 +44,8 @@ py_library(
         "//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_py_pb2",
         "//py/google/fhir:primitive_handler",
         "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/utils:annotation_utils",
+        "//py/google/fhir/core/utils:fhir_types",
         "//py/google/fhir/json_format/wrappers:base64_binary",
         "//py/google/fhir/json_format/wrappers:date",
         "//py/google/fhir/json_format/wrappers:date_time",
@@ -51,8 +53,6 @@ py_library(
         "//py/google/fhir/json_format/wrappers:instant",
         "//py/google/fhir/json_format/wrappers:primitive_wrappers",
         "//py/google/fhir/json_format/wrappers:time",
-        "//py/google/fhir/utils:annotation_utils",
-        "//py/google/fhir/utils:fhir_types",
         "@com_google_protobuf//:protobuf_python",
     ],
 )
@@ -219,7 +219,7 @@ py_test(
         "//py/google/fhir/json_format:json_format_test",
         ":json_format",
         "//py/google/fhir/testing:testdata_utils",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -308,7 +308,7 @@ py_test(
         "//py",
         "//proto/google/fhir/proto/r4/core:datatypes_py_pb2",
         "//py/google/fhir:references",
-        "//py/google/fhir/utils:proto_utils",
+        "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -386,7 +386,7 @@ py_test(
         "//py/google/fhir/fhir_path:_expressions_test_base",
         "//py/google/fhir/fhir_path:context",
         "//py/google/fhir/fhir_path:expressions",
-        "//py/google/fhir/utils:fhir_package",
+        "//py/google/fhir/core/utils:fhir_package",
         requirement("absl-py"),
     ],
 )
