Move internal primitive handling and validation logic to google.fhir.core.internal
PiperOrigin-RevId: 446578923

--- a/py/google/fhir/core/internal/json_format/BUILD
+++ b/py/google/fhir/core/internal/json_format/BUILD
@@ -24,9 +24,8 @@ py_library(
     deps = [
         "//py",
         "//py/google/fhir:extensions",
-        "//py/google/fhir:primitive_handler",
         "//py/google/fhir:references",
-        "//py/google/fhir:resource_validation",
+        "//py/google/fhir/core/internal:primitive_handler",
         "//py/google/fhir/core/utils:annotation_utils",
         "//py/google/fhir/core/utils:fhir_types",
         "//py/google/fhir/core/utils:proto_utils",
