--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -23,8 +23,8 @@ py_library(
     deps = [
         ":primitive_handler",
         "//py",
-        "//py/google/fhir:primitive_time_utils",
-        "//py/google/fhir:resource_validation",
+        "//py/google/fhir/core/internal:primitive_time_utils",
+        "//py/google/fhir/core/internal:resource_validation",
         "//py/google/fhir/core/internal/json_format",
         "@com_google_protobuf//:protobuf_python",
     ],
@@ -42,8 +42,8 @@ py_library(
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
         "//proto/google/fhir/proto/stu3:fhirproto_extensions_py_pb2",
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
-        "//py/google/fhir:primitive_handler",
-        "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/internal:primitive_handler",
+        "//py/google/fhir/core/internal:primitive_time_utils",
         "//py/google/fhir/core/internal/json_format/wrappers:base64_binary",
         "//py/google/fhir/core/internal/json_format/wrappers:date",
         "//py/google/fhir/core/internal/json_format/wrappers:date_time",
@@ -131,7 +131,7 @@ py_test(
         "//proto/google/fhir/proto/stu3:datatypes_py_pb2",
         "//proto/google/fhir/proto/stu3:resources_py_pb2",
         "//py/google/fhir/core/internal/json_format:json_format_test",
-        "//py/google/fhir/stu3:json_format",
+        ":json_format",
         "//py/google/fhir/testing:testdata_utils",
         "//py/google/fhir/core/utils:proto_utils",
         requirement("absl-py"),
@@ -151,8 +151,8 @@ py_test(
     python_version = "PY3",
     deps = [
         "//py",
-        "//py/google/fhir:primitive_handler_test",
-        "//py/google/fhir/stu3:primitive_handler",
+        "//py/google/fhir/core/internal:primitive_handler_test",
+        ":primitive_handler",
         requirement("absl-py"),
         requirement("six"),
     ],
@@ -185,7 +185,7 @@ py_library(
     srcs_version = "PY3",
     deps = [
         "//py",
-        "//py/google/fhir:resource_validation",
+        "//py/google/fhir/core/internal:resource_validation",
         "//py/google/fhir/stu3:primitive_handler",
         "@com_google_protobuf//:protobuf_python",
     ],
