--- a/py/google/fhir/core/internal/json_format/wrappers/BUILD
+++ b/py/google/fhir/core/internal/json_format/wrappers/BUILD
@@ -39,7 +39,7 @@ py_library(
         ":primitive_wrappers",
         "//py",
         "//py/google/fhir:fhir_errors",
-        "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/internal:primitive_time_utils",
         "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
@@ -56,7 +56,7 @@ py_library(
         ":primitive_wrappers",
         "//py",
         "//py/google/fhir:fhir_errors",
-        "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/internal:primitive_time_utils",
         "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
@@ -87,7 +87,7 @@ py_library(
         ":primitive_wrappers",
         "//py",
         "//py/google/fhir:fhir_errors",
-        "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/internal:primitive_time_utils",
         "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
@@ -122,7 +122,7 @@ py_library(
         ":primitive_wrappers",
         "//py",
         "//py/google/fhir:fhir_errors",
-        "//py/google/fhir:primitive_time_utils",
+        "//py/google/fhir/core/internal:primitive_time_utils",
         "//py/google/fhir/core/utils:proto_utils",
         "@com_google_protobuf//:protobuf_python",
     ],
