Introduce ResourceCollection Class
- Add ResourceCollection class for lazy access to resources by URI
  inside a zip file.

PiperOrigin-RevId: 448094395

--- a/bazel/buildfiles/BUILD
+++ b/bazel/buildfiles/BUILD
@@ -2,4 +2,9 @@ licenses(["notice"])
 
 # Build files for external dependencies that do not provide build files.
 
-exports_files(["libarchive_config.h"] + glob(["*.BUILD"]))
+exports_files([
+    "libarchive_config.h",
+    "libzip_config.h",
+    "zipconf.h",
+    "zip_err_str.c",
+] + glob(["*.BUILD"]))
