Add MergeJsonFhirObjectIntoProto Function
- Add function MergeJsonFhirObjectIntoProto which has the same
  semantics as MergeJsonFhirStringIntoProto but expects a pre-parsed
  JSON object rather than raw JSON string.

PiperOrigin-RevId: 448127866

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -185,6 +185,7 @@ cc_library(
     deps = [
         ":primitive_handler",
         "//cc/google/fhir:json_format",
+        "//cc/google/fhir/json:fhir_json",
         "@com_google_absl//absl/status:statusor",
     ],
 )
